Fix: wrap

--- a/src/common/common-style/project.scss
+++ b/src/common/common-style/project.scss
@@ -90,7 +90,7 @@
     display: flex;
     align-items: flex-start;
     gap: 20px;
-    // flex-wrap: wrap;
+    flex-wrap: wrap;
 
   }
   &__item{
